# crappy-pong-rs

./: Cargo.toml  README.md
.github/workflows/: tests.yml
app/: Cargo.toml
app/src/: core.rs  main.rs  player.rs
libs/genetic-algorithm/src/: chromosome.rs  lib.rs
libs/neural-network/src/: layer.rs  lib.rs  neuron.rs
libs/pong/: Cargo.toml
libs/pong/src/: cli.rs  core.rs  gui.rs  lib.rs  player.rs  settings.rs
libs/pong/src/ai/: brain.rs  eye.rs  individual.rs  mod.rs  player.rs
libs/pong/src/entities/: ball.rs  mod.rs  paddle.rs  wall.rs
libs/pong/src/game/: engine.rs  mod.rs  mode.rs
libs/pong/src/players/: mod.rs
libs/pong/src/players/ai/: brain.rs  eye.rs  mod.rs  player.rs
libs/pong/src/players/human/: player.rs
libs/pong/src/state/: gamestate.rs  mod.rs  multistate.rs  score.rs  simulation.rs
src/: core.rs  main.rs  settings.rs
